--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 -->
 </p>
 {% endif %}
-
+<p><strong>Online meeting URL:</strong> <a href = "https://carpentries.zoom.us/j/520552908">https://carpentries.zoom.us/j/520552908</a></p>
 
 <p>
   <strong>Requirements:</strong> Participants should bring a laptop
